--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <body>
     <div class="warning">
         <div class="fbi-logo">
-            <img src="C:\Users\hclod\Downloads\fbi-logo.png" alt="FBI Logo">
+            <img src="fbi-logo.png" alt="FBI Logo">
         </div>
         <h1 class="red-alert">Warning: You Are Under Federal Investigation</h1>
         <p class="alert-text">
